--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "node.js typescript REST API",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
+    "start": "tsc && nodemon --unhandled-rejections=strict ./dist/app.js",
     "debug": "export DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "akmalelahi",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "express-winston": "^4.1.0",
+    "shortid": "^2.2.16",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
+    "@types/shortid": "^0.0.29",
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
